--- a/hkube/templates/configmaps/api-server-cm.yaml
+++ b/hkube/templates/configmaps/api-server-cm.yaml
@@ -19,3 +19,6 @@ data:
   INGRESS_PREFIX: {{ .Values.global.ingress.prefix | quote}}
   BODY_SIZE_LIMIT: {{ .Values.api_server.env.maxBodySize | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
+  API_SERVER_RATE_LIMIT_MS: {{ .Values.api_server.env.rate_limit_ms | quote}}
+  API_SERVER_RATE_LIMIT_MAX: {{ .Values.api_server.env.rate_limit_max | quote}}
+  API_SERVER_RATE_LIMIT_DELAY: {{ .Values.api_server.env.rate_limit_delay | quote}}
