--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -252,6 +252,10 @@ algorunner: # +doc-gen:ignore
   image:
     repository: hkube/algorunner
     tag: v2.1.1
+api_gateway:
+  ingress:
+    path: /hkube/api-server
+    enabled: true
 api_server: # +doc-gen:ignore
   env:
     base_url_path: /hkube/api-server
@@ -266,7 +270,7 @@ api_server: # +doc-gen:ignore
     repository: hkube/api-server
     tag: v2.1.21
   ingress:
-    enabled: true
+    enabled: false
     path: /hkube/api-server
   service:
     type: ClusterIP
