--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,8 @@ description: |
 # We also use custom variables accessed in index.md by {% site.variableName %}
 stableCharts:
   - hkube
+
+stableVersions:
+  - v2.0
+  - v1.3
+  - v1.2
