--- a/hkube/templates/sync-server-deployment.yaml
+++ b/hkube/templates/sync-server-deployment.yaml
@@ -96,6 +96,7 @@ kind: Ingress
 metadata:
   annotations:
     kubever: {{ template "common.capabilities.kubeVersion" .}}
+    apiver:  {{ template "ingress.apiVersion" . }}
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 {{- else }}
