--- a/hkube/templates/configmap.yaml
+++ b/hkube/templates/configmap.yaml
@@ -11,6 +11,7 @@ data:
               "ingressHost": {{ .Values.global.ingress.hostname | quote }},
               "ingressPrefix": {{ .Values.global.ingress.prefix | quote }},
               "ingressUseRegex": {{ .Values.global.ingress.use_regex }},
+              "ingressClass": {{ .Values.global.ingress.class | quote }},
               "devModeEnabled": {{ .Values.sync_server.enabled }}
         }
   versions.json: |
