--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -100,6 +100,10 @@ jaeger:
     ingress:
       enabled: true
   agent:
+    # set the deployment kind of the jaeger-agent. options are daemonset and deployment
+    deploymentKind: daemonset
+    deployment:
+      replicas: 1
     daemonset:
       # set to false to allow running in non privileged environment (e.g. openshift)
       useHostPort: true
