--- a/hkube/templates/algorithm-operator-role.yaml
+++ b/hkube/templates/algorithm-operator-role.yaml
@@ -29,9 +29,17 @@ rules:
 - apiGroups: ["batch"]
   resources: ["jobs"]
   verbs: [create, delete, deletecollection, get, list, patch, update, watch]
-- apiGroups: ["extensions", "networking.k8s.io"]
+
+{{- if .Capabilities.APIVersions.Has "extensions/v1beta1/Ingress" }}
+- apiGroups: ["extensions"]
   resources: ["ingresses"]
   verbs: [create, delete, deletecollection, get, list, patch, update, watch]
+{{- end }}
+{{- if or (.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress") (.Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress") }}
+- apiGroups: ["networking.k8s.io"]
+  resources: ["ingresses"]
+  verbs: [create, delete, deletecollection, get, list, patch, update, watch]
+{{- end }}  
 - apiGroups:
   - ""
   resources:
