--- a/hkube/templates/api-server-deployment.yaml
+++ b/hkube/templates/api-server-deployment.yaml
@@ -34,6 +34,7 @@ spec:
       volumes:
         - name: uploads
           emptyDir: {}
+{{ include "hkube.fluent_bit.volume" . | indent 8 }}
 {{- if eq .Values.env.default_storage "fs" }}
         - name: storage-volume
           persistentVolumeClaim:
@@ -52,6 +53,7 @@ spec:
           volumeMounts:
             - name: uploads
               mountPath: /hkube/api-server/uploads
+{{ include "hkube.fluent_bit.volumemount" . | indent 12 }}
 {{- if eq .Values.env.default_storage "fs" }}
             - name: storage-volume
               mountPath: {{ .Values.global.storage.fs.base_directory | quote}}
@@ -114,3 +116,4 @@ spec:
                   name: mongodb-secret
                   key: mongodb-database
 {{- end }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
