--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -61,6 +61,30 @@ global:
     requireTls: false
     maxBodySize: 500m
     class: nginx
+  sidecars:
+    fluent_bit:
+      enable: false
+      config:
+        name: fluent-bit-cm
+        create_cm: true
+        log_file: "*.log"
+        mount_path: /mnt/log
+        es:
+          url: ""
+          port: "9200"
+          tls: "Off"
+          tls_verify: "Off"
+          logStashPrefix: "hkube-"
+          user: ""
+          password: ""
+      image: # +doc-gen:ignore
+        repository: fluent/fluent-bit
+        tag: "1.8.3"
+      resources:
+        limits:
+          cpu: 100m
+          memory: 200Mi
+      
 env:
   # storage mode. can be s3 or fs. Set global.storage.fs or global.storage.s3 accordingly
   default_storage: s3
