--- a/hkube/templates/configmaps/algorithm-operator-cm.yaml
+++ b/hkube/templates/configmaps/algorithm-operator-cm.yaml
@@ -22,4 +22,5 @@ data:
   PYTHON_WRAPPER_VERSION : {{ .Values.algorithm_operator.env.python_wrapper_version | quote }}
   NODE_WRAPPER_VERSION : {{ .Values.algorithm_operator.env.node_wrapper_version | quote }}
   IS_PRIVILEGED: {{ .Values.global.isPrivileged | quote}}
+  INTERVAL_MS: {{ .Values.algorithm_operator.env.interval | quote}}
 
