--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -84,7 +84,7 @@ global:
         limits:
           cpu: 100m
           memory: 200Mi
-      
+
 env:
   # storage mode. can be s3 or fs. Set global.storage.fs or global.storage.s3 accordingly
   default_storage: s3
@@ -350,7 +350,7 @@ busybox: # +doc-gen:ignore
 gc_service: # +doc-gen:ignore
   # all maxAge are in minutes
   env:
-    hkube_log_level: '2'
+    hkube_log_level: 'info'
     rest_port: 7000
     base_url_path: /hkube/gc-service
 
@@ -477,7 +477,7 @@ pipeline_driver: # +doc-gen:ignore
     type: ClusterIP
 pipeline_driver_queue: # +doc-gen:ignore
   env:
-    hkube_log_level: '2'
+    hkube_log_level: 'info'
     metric_port: '3000'
     check_queue_interval: '500'
   image:
@@ -507,7 +507,7 @@ resource_manager: # +doc-gen:ignore
     algorithms_threshold_mem: '0.9'
     driver_threshold_cpu: '0.1'
     driver_threshold_mem: '1'
-    hkube_log_level: '2'
+    hkube_log_level: 'info'
     interval: '1000'
     metric_port: '3000'
     prometheus_endpoint: 'http://monitoring-prometheus-server.monitoring:9090/api/v1'
@@ -522,7 +522,7 @@ resource_manager: # +doc-gen:ignore
       memory: 512Mi
 simulator: # +doc-gen:ignore
   env:
-    hkube_log_level: '2'
+    hkube_log_level: 'info'
     port: 9050
     monitor_backend_path: /hkube/monitor-server/
     monitor_backend_path_socketio: /hkube/monitor-server/socket.io
