--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -56,6 +56,7 @@ spec:
               containerPort: {{ index .Values "algorithm_operator" "env" "metric_port" }}
               protocol: TCP
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
