--- a/hkube/templates/configmap.yaml
+++ b/hkube/templates/configmap.yaml
@@ -12,7 +12,8 @@ data:
               "ingressPrefix": {{ .Values.global.ingress.prefix | quote }},
               "ingressUseRegex": {{ .Values.global.ingress.use_regex }},
               "ingressClass": {{ .Values.global.ingress.class | quote }},
-              "devModeEnabled": {{ .Values.sync_server.enabled }}
+              "devModeEnabled": {{ .Values.sync_server.enabled }},
+              "fluentbitSidecarEnabled": {{ .Values.global.sidecars.fluent_bit.enable }}
         }
   versions.json: |
         {
