--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -51,6 +51,7 @@ spec:
           ports:
             - containerPort: {{ .Values.task_executor.env.metric_port }}
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
