--- a/hkube/templates/configmaps/pipeline-driver-queue-cm.yaml
+++ b/hkube/templates/configmaps/pipeline-driver-queue-cm.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: pipeline-driver-queue-configmap
 data:
-  NODE_ENV: {{.Values.env.node_env}}
+  NODE_ENV: {{ .Values.env.node_env }}
   HKUBE_LOG_LEVEL: {{ .Values.pipeline_driver_queue.env.hkube_log_level | quote}}
-  METRICS_PORT: {{ .Values.pipeline_driver_queue.env.metric_port }}
+  METRICS_PORT: {{ .Values.pipeline_driver_queue.env.metric_port | quote}}
   CHECK_QUEUE_INTERVAL: {{ .Values.pipeline_driver_queue.env.check_queue_interval | quote }}
