--- a/hkube/templates/resource-manager-deployment.yaml
+++ b/hkube/templates/resource-manager-deployment.yaml
@@ -51,6 +51,7 @@ spec:
           ports:
             - containerPort: {{ index .Values "resource_manager" "env" "metric_port" }}
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -123,3 +124,6 @@ spec:
                   name: mongodb-secret
                   key: mongodb-database
 {{- end }}
+{{ include "hkube.fluent_bit.volumemount_full" . | indent 10 }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
+{{ include "hkube.fluent_bit.volume_full" . | indent 6 }}
