--- a/hkube/templates/datasources-service-deployment.yaml
+++ b/hkube/templates/datasources-service-deployment.yaml
@@ -23,6 +23,7 @@ spec:
         release: datasources-service
         group: {{ .Values.labels.group.value }}
     spec:
+      serviceAccountName: datasources-service-serviceaccount
 {{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
         - name: {{ .Values.global.image_pull_secret.name }}
@@ -34,6 +35,7 @@ spec:
       volumes:
         - name: temp
           emptyDir: {}
+{{ include "hkube.fluent_bit.volume" . | indent 8 }}
 {{- if eq .Values.env.default_storage "fs" }}
         - name: storage-volume
           persistentVolumeClaim:
@@ -57,6 +59,7 @@ spec:
               mountPath: /hkube/datasources-storage
             - name: temp
               mountPath: /TEMP_DIRECTORY
+{{ include "hkube.fluent_bit.volumemount" . | indent 12 }}
 {{- if eq .Values.env.default_storage "fs" }}
             - name: storage-volume
               mountPath: {{ .Values.global.storage.fs.base_directory | quote}}
@@ -67,6 +70,7 @@ spec:
             - containerPort: {{ .Values.datasources_service.env.port }}
               protocol: TCP
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: METRICS_PORT
               valueFrom:
                 configMapKeyRef:
@@ -182,3 +186,4 @@ spec:
                   key: password 
             - name: TEMP_DIRECTORY
               value: "/TEMP_DIRECTORY"
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
