--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -51,6 +51,7 @@ spec:
           ports:
             - containerPort: {{ .Values.task_executor.env.metric_port }}
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -146,4 +147,7 @@ spec:
                 secretKeyRef:
                   name: mongodb-secret
                   key: mongodb-database
-{{- end }}              
+{{- end }}
+{{ include "hkube.fluent_bit.volumemount_full" . | indent 10 }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
+{{ include "hkube.fluent_bit.volume_full" . | indent 6 }}
